--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,20 +18,11 @@ services:
     container_name: VegetationRecordService
     hostname: has.prod.vegetation-record-service
     restart: on-failure
-    depends_on:
-      - mongoDatabase
-    links:
-      - mongoDatabase
     ports:
       - "4000:4000"
     expose:
       - "4000"
-    networks:
-      - main-network
 networks:
-  main-network:
-    name: "PlantNetwork"
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.25.0.0/24
+  default:
+    name: "nginx_default"
+    external: true
