--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
     "http": "^0.0.1-security",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
     "koa-router": "^12.0.0",
     "mongoose": "^6.5.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
-    "concurrently": "7.3.0",
-    "jest": "^28.1.3",
-    "nodemon": "2.0.19",
     "@types/koa": "^2.0.45",
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-router": "^7.0.27",
     "@types/node": "^9.6.5",
-    "typescript": "^2.8.1"
+    "concurrently": "7.3.0",
+    "jest": "^28.1.3",
+    "nodemon": "2.0.19",
+    "typescript": "^4.8.4"
   }
 }
